--- a/README.org
+++ b/README.org
@@ -1,18 +1,19 @@
+#+TITLE: Kyria Keymap
 #+OPTIONS: ^:nil
-* Kyria Keymap
-** About
+* Table of Contents :TOC_3:noexport:
+- [[#about][About]]
+- [[#features][Features]]
+  - [[#caps-word][Caps Word]]
+  - [[#configuration--usage][Configuration / Usage]]
+
+* About
 This is my QMK Kyria keymap, it has some nifty features and an interesting base layer.
 
 The base alpha layer I use is a modified RSTHD, which has some /interesting/ (perhaps dubious), choices.
 To understand my thought process you can read my [[./logs.org][Keymap Logs]].
 
-** Features
-*** Case Modes
-Case modes is a feature that implements different case handling modes, [[#caps-word][Caps Word]], and [[#x-case][X-Case]]. See [[./casemodes.c][casemodes.c]] for implementation details.
-
-Also I'd like to shout out the [[https://splitkb.com][splitkb.com]] discord users for all their input and ideas with this feature.
-
-**** Caps Word
+* Features
+** Caps Word
 #+NAME: caps-word
 Caps word is a feature I came up with a while back that essentially acts as a caps lock key but only for the duration of a "word".
 This makes macros like =CAPS_WORD= really easy to type, it feels a lot like using one shot shift, and it pairs very nicely with it.
@@ -25,34 +26,15 @@ By default caps lock is used as the underlying capitalization method, however yo
 
 To use this feature =enable_caps_word()= or =toggle_caps_word()= can be called from a macro, combo, tap dance, or whatever else you can think of.
 
-**** X-Case
-#+NAME: x-case
-X-Case is an idea from [[https://github.com/baffalop][@baffalop]], it's takes the idea of caps word but applies it to different kinds of programming cases.
-So for example say you want to type ~my_snake_case_variable~, rather than pressing ~_~ every time (which is almost certainly behind a layer), you can hit a "snake_case" macro that turns all your spaces into underscores, it can then be exited using whatever you define as the end of a word in =terminate_case_mode()=.
-[[https://github.com/baffalop][@baffalop]] also suggested using a double tap space as an exit condition, which is also implemented here.
-
-Now this is just a snake case macro, what if you want kebab-case? Well x-case can be applied here, but now instead of replacing space with an ~_~ it replaces it with a ~-~ instead.
-The idea of x-case is to make it easy to achieve these kinds of case modes. For example to enable snake_case mode, you just need to call =enable_xcase_with(KC_UNDS)= and for kebab it's simply =enable_xcase_with(KC_MINS)=.
-
-So you might ask, what about camelCase? Well, we got that covered too! If you call =enable_xcase_with(OSM(MOD_LSFT))=, your spaces will be turned into one shot shifts enabling you to write camelCase.
-
-Finally, because you might want to use this for some more obscure use cases, there's the =enable_xcase()= function.
-This function will intercept your next keystroke and use that as it's case delimiter.
-For example, calling =enable_xcase()= and then hitting your ~/~ key will result in your spaces begin turned into slashes. (This is the equivalent of calling =enable_xcase_with(KC_SLSH))=)
-
-Note that =terminate_case_mode()= also determines the stop conditions for x-case, however the spaces (and their new values) will not be passed through the terminate function.
-
-It should also not that if you want some thing like SCREAMING_SNAKE_CASE, you just have to enable caps word and xcase (in either order).
-
-**** Configuration / Usage
-- Add [[./casemodes.c][casemodes.c]] to your ~SRCS~ by calling adding ~SRC += casemodes.c~ to your rules.mk.
+** Configuration / Usage
+- Add [[./capsword.c][capsword.c]] to your ~SRCS~ by calling adding ~SRC += capsword.c~ to your rules.mk.
 - Add =process_case_modes()= to your =process_record_user()=, it can either go at the top or the bottom, it depends on how you want it to interact with your keycodes.
 
   If you process at the beginning it will look something like this, make sure that you return false when =process_case_modes= returns false.
   #+begin_src C
 bool process_record_user(uint16_t keycode, keyrecord_t *record) {
     // Process case modes
-    if (!process_case_modes(keycode, record)) {
+    if (!process_caps_word(keycode, record)) {
         return false;
     }
     ...
@@ -69,7 +51,7 @@ enum custom_keycodes {
 
 bool process_record_user(uint16_t keycode, keyrecord_t *record) {
     // Process case modes
-    if (!process_case_modes(keycode, record)) {
+    if (!process_caps_word(keycode, record)) {
         return false;
     }
 
@@ -78,11 +60,6 @@ bool process_record_user(uint16_t keycode, keyrecord_t *record) {
         case CAPSWORD:
             if (record->event.pressed) {
                 enable_caps_word();
-            }
-            return false;
-        case SNAKECASE:
-            if (record->event.pressed) {
-                enable_xcase_with(KC_UNDS);
             }
             return false;
         default:
@@ -127,5 +104,3 @@ bool terminate_case_modes(uint16_t keycode, const keyrecord_t *record) {
  You can of course tweak this to get the exact functionality you want. Some people prefer to use a switch statement where they look for keys to end on, and default to keeping the mode enabled otherwise. I prefer the above method because I would rather exit the mode than stay in it.
 
 - (Optional) Use shift rather than caps lock in caps word. To do this simply add =#define CAPSWORD_USE_SHIFT= in you config.h.
-
-
