--- a/README.org
+++ b/README.org
@@ -19,7 +19,7 @@ This is my QMK Kyria keymap, it has some nifty features and an interesting base 
 The base alpha layer I use is a modified RSTHD, which has some /interesting/ (perhaps dubious), choices.
 To understand my thought process you can read my [[./logs.org][Keymap Logs]].
 
-[[file:images/kyria.png][keymap]]
+[[img:./images/kyria.png]]
 
 * Features
 ** Case Modes
